2004-02-09 Craig Franklin <craigfranklin@comcast.net>
  * Fixed bug in gpdasm relative branches.

2004-02-07 Craig Franklin <craigfranklin@comcast.net>
  * Fixed uninitialized memory in escape character conversion.

2004-01-20 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.12.0 Released.
  * Fixed bug in gpdasm relative branches.
  * Force decimal interpretation of debug line number directive in gpasm.
  * Don't insert LIST or NOLIST symbols in gpasm COFF outputs if debug
    directives are used.
  * Fixed bug when concatenated symbols <string>_#v<expr> is used as a
    macro argument.
  * Fill missing 18xx config words in gpasm relocatable objects with 0xff
    instead of generating an error.

2004-01-16 Craig Franklin <craigfranklin@comcast.net>
  * Use install path for default when environmental variable isn't set.
  * Added GPUTILS_LIB_PATH environmental variable for gplink.
  * Added list file output to gplink and fixed bugs in cod file output.
  * Added automake work around to fix compile order for bison outputs.
  * Switched to AM_ flags in automake so users can specify additional
    flags.

2004-01-09 Craig Franklin <craigfranklin@comcast.net>
  * Allow full path to object file in gplib when creating an archive.
  * Always generate a warning when a source is missing an endif.
  * Prevent #v label from being processed when assembly is disabled.
  * Force list file to print blank space when assembly is disabled.

2004-01-07 Craig Franklin <craigfranklin@comcast.net>
  * Use environmental variables GPUTILS_HEADER_PATH and GPUTILS_LKR_PATH
    for the default header and lkr paths.
  * Removed CFLAGS from mingw port.
  * Fixed COFF line number bugs in gplink.
  * Fixed 18xx symbol offset bug when merging sections in gplink.
  * Fixed segfault in gplink when sections missing relocations are merged.

2004-01-01 Scott Dattalo <scott@dattalo.com>
  * libgputils/gpsystem.c - added unsigned short gp_getu16(char *addr)